--- a/kube/ingress_main.yaml
+++ b/kube/ingress_main.yaml
@@ -1,12 +1,22 @@
-apiVersion: extensions/v1beta1
+apiVersion: networking.k8s.io/v1beta1
 kind: Ingress
 metadata:
   name: ingress-main
+  annotations:
+    nginx.ingress.kubernetes.io/rewrite-target: /$1
 spec:
   rules:
+    - host: api.playinkube.com
+      http:
+        paths:
+          - path: /user/*
+            backend:
+              serviceName: service-msuser
+              servicePort: 3001
     - host: www.playinkube.com
       http:
         paths:
-          - backend:
+          - path: /
+            backend:
               serviceName: service-webmain
               servicePort: 3001
