1. add wwwmain 2. update kube

--- a/kube/ingress_main.yaml
+++ b/kube/ingress_main.yaml
@@ -18,5 +18,5 @@ spec:
         paths:
           - path: /
             backend:
-              serviceName: service-webmain
+              serviceName: service-wwwmain
               servicePort: 3001
